--- a/Remember-the-Cow/bottom.html
+++ b/Remember-the-Cow/bottom.html
@@ -1,6 +1,5 @@
 <!--
-Nadia Kazi, CSE 190M, 
-June 01, 2012, Section: MJ
+Nadia Kazi, 
 This page is part of the site that outputs the footer text and w3c validator icons in html.
 -->
 
